css/style.css
body, html {
    height: 100%;
    width: 100%;
}

body {
    background-color: #97a579;
    margin: 0;
    padding: 0;
}

div {
    padding:0;
}

p {
    padding:0;
    margin:0;
    font-family: Lato, sans-serif;
    font-weight: bold;
}

.cormorant-infant-light {
    font-family: "Cormorant Infant", serif;
    font-weight: 300;
    font-style: normal;
}

.cormorant-infant-regular {
    font-family: "Cormorant Infant", serif;
    font-weight: 400;
    font-style: normal;
}

.cormorant-infant-medium {
    font-family: "Cormorant Infant", serif;
    font-weight: 500;
    font-style: normal;
}

.cormorant-infant-semibold {
    font-family: "Cormorant Infant", serif;
    font-weight: 600;
    font-style: normal;
}

.cormorant-infant-bold {
    font-family: "Cormorant Infant", serif;
    font-weight: 700;
    font-style: normal;
}

.cormorant-infant-light-italic {
    font-family: "Cormorant Infant", serif;
    font-weight: 300;
    font-style: italic;
}

.cormorant-infant-regular-italic {
    font-family: "Cormorant Infant", serif;
    font-weight: 400;
    font-style: italic;
}

.cormorant-infant-medium-italic {
    font-family: "Cormorant Infant", serif;
    font-weight: 500;
    font-style: italic;
}

.cormorant-infant-semibold-italic {
    font-family: "Cormorant Infant", serif;
    font-weight: 600;
    font-style: italic;
}

.cormorant-infant-bold-italic {
    font-family: "Cormorant Infant", serif;
    font-weight: 700;
    font-style: italic;
}

.windsong-regular {
    font-family: "WindSong", cursive;
    font-weight: 400;
    font-style: normal;
}

.windsong-medium {
    font-family: "WindSong", cursive;
    font-weight: 500;
    font-style: normal;
}

.jarallax {
    position:relative;
    z-index:0;
    opacity:0.9;
}

a .a2 {

}

a {
    color: #2c3c23;
    position: relative;
    text-decoration: none;
}

a::before {
    background: hsl(48, 62%, 89%);
    content: "";
    inset: 0;
    position: absolute;
    transform: scaleX(0);
    transform-origin: right;
    transition: transform 0.5s ease-in-out;
    z-index: -1;
}

a:hover::before {
    transform: scaleX(1);
    transform-origin: left;
}

.border{
    content:"";
    background: -webkit-linear-gradient(left, rgb(181, 85, 43) 0%, rgb(149, 87, 44) 12%, rgb(228, 147, 76) 47%, rgb(115, 70, 17) 100%);
    box-sizing:inherit;
    height:2px;
    width: 100%;
    position: relative;
    justify-self:center;
    bottom: 0;
}

.border-small{
    content:"";
    background: -webkit-linear-gradient(left, rgb(181, 85, 43) 0%, rgb(149, 87, 44) 12%, rgb(228, 147, 76) 47%, rgb(115, 70, 17) 100%);
    box-sizing:inherit;
    height:2px;
    width: 100%;
    position: relative;
    left:8vw;
    justify-self:center;
    bottom: 0;
}

.jarallax > .jarallax-img {
    position:absolute;
    object-fit: cover;

    top:0;
    left:0;
    width:100vw;
    height:100%;
    z-index:-1;
}

@font-face {
    font-family: 'Darling';
    src: url('fonts/Darling.woff2') format('woff2'),
    url('fonts/Darling.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}



/* Container Styles */

.container {
    padding: 1vw;
}
.container h1 {
    font-size: 10vw;
    margin-bottom: 0.1em;
    margin-top: 0.3em;
    text-transform: uppercase;
    font-weight: 1000;
    letter-spacing: 6px;
    text-align: center;
    font-family: Cormorant Infant, serif;
    color: #2c3c23;
}

.box h2 {
    font-size: 8vw;
    margin-bottom: 0.5em;
    margin-top: 0.5em;
    text-transform: none;
    letter-spacing: 4px;
    font-weight: 800;
    font-family: Cormorant Infant, serif;
    line-height: 1em;
    color: #f2f2f2;
}

.box p {
    font-size: 6vw;
    margin-top: 1em;
    margin-bottom: 0;
    text-transform: none;
    letter-spacing: 4px;
    font-weight: 600;
    font-family: Windsong, serif;
    line-height: 1em;
    color: #2c3c23;
}

.box p.accent {
    font-size: 6vw;
    margin-top: 1em;
    margin-bottom: 0;
    text-transform: none;
    letter-spacing: 4px;
    font-weight: 500;
    font-family: Cormorant Infant, serif;
    line-height: 1em;
    color: #2c3c23;
}

.box p.small {
    font-size: 5.5vw;
    margin-top: 1em;
    margin-bottom: 0;
    text-transform: none;
    letter-spacing: 4px;
    font-weight: 600;
    font-family: windsong, serif;
    line-height: 1em;
    color: #2c3c23;

    white-space: nowrap;
}

.box p.footer {
    font-size: 3.5vw;
    margin-top: .5em;
    margin-bottom: 0;
    text-transform: none;
    letter-spacing: 4px;
    font-weight: 600;
    font-family: windsong, serif;
    line-height: 1em;
    color: #2c3c23;

    white-space: nowrap;
}

/*.container h1::before {
    content: '─';
    margin-right: 0.6em;
    color: #95572c;
}
.container h1::after {
    content: '─';
    margin-left: 0.6em;
    color: #95572c;
}
*/
.boxes {
    margin-top: 30px;
    display: flex;
    justify-content: space-evenly;
}

.boxes:last-child {
    margin-top: 30px;
}

.box {
    width: 80vw;
    font-size: 1.5em;
    line-height: 1em;
    font-weight: 200;
    padding: 0 5vw 5vw;
    border-right: 0;
    border-left: 2px;
    border-style: solid;
    /* 	border-image: linear-gradient(to bottom, #ccc, #555 66%, #181818) 1 100%; */
    border-image: linear-gradient(to bottom, #a3a3a3, #edaa4e, #8a8a8a) 1 100%;
}
.box:last-child {
    border-right: 2px;
}

